# sqlite-gitoxide

./: .gitignore  Cargo.toml  Makefile  dbg.sql  sqlite-dist.toml
.github/workflows/: release.yaml  test.yaml
src/: lib.rs  log.rs
