[package]
name = "sqlite-git"
version = "0.0.1-alpha.2"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
gitoxide = "0.44.0"
gix = "0.72.1"
sqlite-loadable = {git = "https://github.com/asg017/sqlite-loadable-rs.git", ref = "a4e2e69e41e72bfdf91b58e457e425f7a0618ca4"}

[lib]
crate-type=["lib", "staticlib", "cdylib"]
